# observable

./: .gitignore  .travis.yml  CMakeLists.txt  build.gradle  gtest_build.sh
Google_tests/: CMakeLists.txt  test_observable_class.cpp
src/observable/headers/: observable.hpp
src/observableTest/cpp/: test_observable_class.cpp
src/observer/headers/: observer.hpp
src/observerTest/cpp/: test_observer_class.cpp
